# port-royal

./: README.md  go.mod  main.go  main.py  pyproject.toml
contexts/: animals.cxt  birds.json  friends.json  penguins.cxt
data/: basis_test.ctx  example_concepts.ctx  example_sergei_talk.ctx  input.ctx  rank0.cxt  rank1.cxt  scenes.ctx  zoo.ctx  zoo_small.ctx
data/zoo/: convert_to_ctx.py  export_zoo_to_latex.py  zoo_small.data
fcacomponents/: components.go  implications.go  tools.go
readwrite/: read_context.go  read_ranked_context.go
src/: __init__.py  algorithms.py  conditional.py  context.py  defeasible_implications.py  implications.py  io.py  latex_export.py  main.py  ranked_context.py  translated_ranked_context.py
zoo/: data-import.py
