[project]
name = "rational-concept-analysis-reasoner"
version = "0.1.0"
description = "A formal concept analysis prototype tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bitarray>=2.8.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
